tests/feature_tests/error_main2.c
// error: 'main' function must have 0 or 2 arguments
int main(int a, int b, int c) {}
